--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <main>
 
         <header>
-            <div><img src="./img/icons8-menu-90.png" alt=""></div>
+            <div class="menu">
+                <img src="./img/icons8-menu-90.png" alt="">
+            </div>
             <div class="banner">
                 
                 <div class="banner-txt"> about</div>
@@ -24,8 +26,8 @@
         </header>
         <section>
             <div class="displaytext">
-                <div class="display-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Minima minus quae recusandae rem suscipit omnis maiores fugit nobis ab numquam. Quod dicta aspernatur facilis enim totam eos laborum possimus cum!</div>
-                <div class="display-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus ad deleniti aliquam provident consequatur voluptatibus culpa libero quaerat sunt laudantium nulla nam ea, debitis quae? Rem porro minus delectus!</div>
+                <div class="display-txt"><span>H</span>e lorem ipsum, dolor sit amet consectetur adipisicing elit.aspernatur adipi <br> suscipit omnis maiores adipi fugit nobis ab numquam. Quod dicta facilis <br> ye enim totam eos laborum possimus cum!</div>
+                <div class="display-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. an <br> Beatae doloribus ad deleniti aliquam provident consequatur <br> voluptatibus culpa libero quaerat sunt laudantium nulla nam <br> ea, debitis quae? Rem porro minus delectus! product to buy<br> Beatae doloribus ad deleniti aliquam provident consequatur <br> voluptatibus culpa libero quaerat sunt laudantium nulla nam <br></div>
             </div>
         </section>
         <section>
@@ -56,10 +58,13 @@
         <section>
             <div class="article">
                 <div class="article-img"><img src="./img/article-img.jpeg" alt=""></div>
-        
-            <div class="article-text">Lorem ipsum dolor sit amet, consectetur adipisicing  accounting<br> elit. Dolore, repudiandae sint assumenda culpa unde ea nobis a <br> delectus nihil voluptas, accusantium optio reiciendis ipsum. adgft<br> Tenetur dolores aliquid et pariatur incidunt consequuntur? from<br>
+                <div class="article-text">
+            <div class="art">
+                Lorem ipsum dolor sit amet, consectetur adipisicing  accounting<br> elit. Dolore, repudiandae sint assumenda culpa unde ea nobis a <br> delectus nihil voluptas, accusantium optio reiciendis ipsum. adgft<br> Tenetur dolores aliquid et pariatur incidunt consequuntur? from<br>
                 Lorem ipsum dolor sit amet consectetur adipisicing production  <br> elit. Quibusdam suscipit voluptates ea tempore officia obcaecati  <br> facilis praesentium repellendus perferendis possimus expedita <br> quod veniam dolore  cupiditate, cum dolorum illo adipisci aut!
             </div>
+            <p>Aria Diamartis Glaremann</p>
+        </div>
             </div>
         </section>
         <section>
